# library-management

./: .gitignore  CMakeLists.txt  add_controller.sh  add_model.sh  setup_project.sh
include/: Book.h  Library.h  Loan.h  Member.h
include/controllers/: BookController.h  LibraryController.h  UserController.h
include/models/: Book.h  Library.h  User.h
src/: Book.cpp  Library.cpp  Loan.cpp  Member.cpp  main.cpp
src/controllers/: BookController.cpp  LibraryController.cpp  UserController.cpp
src/models/: Book.cpp  Library.cpp  User.cpp
